--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: animated_path
+name: animated_path_builder
 description: "An Animated Widget for create path animation."
 version: 1.0.0
 homepage: 'https://github.com/Dabbit-Chan/animated_path'
