--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  animated_path:
+  animated_path_builder:
     path: ../
 
 dev_dependencies:
